# dll-import

./: .gitignore  README.md  dll-import.sln
CppPalindrome/: CMakeLists.txt  palindrome.cpp
DllImport/: Program.cs
